Business Requirements - add conceptual dictionary

--- a/doc/business-requirements/document.tex
+++ b/doc/business-requirements/document.tex
@@ -27,7 +27,22 @@ Dodatkowa funkcjonalność systemu będzie obejmowała dodanie zdjęcia kandydat
 Uzytkownicy będą mieli dostęp do systemu zarówno z przeglądarki internetowej jak i z aplikacji mobilnej na telefonach z systemem Android.
 
 \section{Słownik pojęć}
-Aplikacja (webowa|mobilna), Architektura, System, Okres rekrutacyjny, Użytkownik|Kandydat, Rejestracja, Egzamin
+
+\begin{itemize}
+	\item \textbf{System} - rozwiązanie mające na celu rekrutację uczniów do szkół średnich
+	\item \textbf{Architektura} - podstawowa organizacja systemu wraz z jego komponentami, powiązaniami i regułami ustanawiającymi sposób budowy i rozwoju systemu
+	\item \textbf{Szkoła} - instytucja oświatowo-wychowawcza będąca odbiorcą systemu
+	\item \textbf{Użytkownik} - osoba korzystająca z systemu
+	\item \textbf{Kandydat} - użytkownik, który chce wziąć udział w rekrutacji do szkoły
+	\item \textbf{Aplikacja webowa (internetowa)} - program komputerowy, pracujący na serwerze i komunikujący się poprzez sieć komputerową z urządzeniem użytkownika z wykorzystaniem przeglądarki internetowej użytkownika
+	\item \textbf{Aplikacja mobilna} - program działający na urządzeniach mobilnych (telefony komórkowe, smartfony, tablety)
+	\item \textbf{Aplikacja} - aplikacja webowa lub aplikacja mobilna, która daje dostęp do systemu
+	\item \textbf{Rejestracja} - proces przekazania danych kandydata do systemu poprzez aplikację oraz wpłacenia kwoty egzaminacyjnej
+	\item \textbf{Egzamin} - forma sprawdzenia wiedzy kandydatów po udanym procesie rejestracji, będąca podstawą do przyjęcia bądź odrzucenia kandydata do szkoły
+	\item \textbf{Kwota egzaminacyjna} - ustalona przez szkołę na okres rekrutacji kwota pieniężna, która musi być uiszczona przed ukończeniem procesu rejestracji
+	\item \textbf{Okres rekrutacyjny} - okres ustalony przez szkołę, w którym można się rejestrować
+\end{itemize}
+
 \section{Wymagania funkcjonalne}
 
 \section{Wymagania niefunkcjonalne}
